--- a/web/index.html
+++ b/web/index.html
@@ -6,5 +6,23 @@
 </head>
 <body>
   <script src="main.dart.js" type="application/javascript"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
+<script>
+  const firebaseConfig = {
+  apiKey: "AIzaSyAw9Z0YN8f1ljbEdovDfHg_36TWX1s6YL0",
+  authDomain: "parlour-a2347.firebaseapp.com",
+  projectId: "parlour-a2347",
+  storageBucket: "parlour-a2347.appspot.com",
+  messagingSenderId: "958813889781",
+  appId: "1:958813889781:web:5fe176bb7de94f6f1951bc"
+};
+
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
